<resources>
    <string name="app_name">Recharge Demo</string>
    <string name="phone_no">Phone no</string>
    <string name="get_otp">Get OTP</string>
    <string name="logo">Logo</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="verify_and_sign_in">Verify and Signin</string>
    <string name="self_recharge">Self Recharge</string>
    <string name="recharge_for_a_friend">Recharge for a Friend</string>
    <string name="recharge_user_interface_starts_from_here">Recharge User Interface starts from here…</string>
    <string name="log_out">Log out</string>
</resources>